--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="app">
         <header>
             <h1>Tap Music</h1>
-            <p>Make music with onl one tap</p>
+            <p>Make music with only one tap</p>
         </header>
         <div class="visual"></div>
         <div class="pads">
